--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<title>Home</title>
+		<script src="userInfo.js"></script>
+		<meta charset="utf-8">
 	</head>
 	<body>
 		<main>
