update index.html with footer and userInfo.js with prompts

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Home</title>
-		<script src="userInfo.js"></script>
 		<meta charset="utf-8">
+		<title>Beginning Web Programming</title>
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<main>
+		<script src="userInfo.js"></script>
 		
 		<section>
 			<nav id="top-nav"> 
@@ -18,8 +19,28 @@
 		
 		<section>
 			<h1><strong>Main Character</strong></h1>
-			<p>Welcome to my digital portfolio! I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
+			<h2>Welcome to my digital portfolio!</h2>
+			<p>I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
         	</p>
+		</section>
+
+		<section>
+			<h2>Skills</h2>
+			<ul>
+				<li>Proficient in design tools such as Adobe Creative Suite (Photoshop, Illustrator, XD) and Figma.</li>
+				<li>Strong understanding of user-centered design principles and best practices.</li>
+				<li>Experience with wireframing and prototyping tools like Sketch and InVision.</li>
+				<li>Basic knowledge of HTML, CSS, and JavaScript for effective collaboration with developers.</li>
+				<li>Excellent communication and teamwork skills, with the ability to present and justify design decisions.</li>
+			</ul>
+		</section>
+
+		<section>
+			<footer>	
+			<p>&copy; 2025 Omar Brown</p>
+			<p>Contact: 000-000-0000</p>
+			<p>Email: omar@brown.com</p>
+			</footer>
 		</section>
 		</main>
 	</body>
