added h2 for compliance

--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
 	<body>
 		<main>
 		<script src="userInfo.js"></script>
-		
-		<section>
-			<nav id="top-nav"> 
+		<nav id="top-nav"> 
 			<a href="/index.html">Home</a> |
-			<a href="">Nav Link 1</a> |
-			<a href="">Nav Link 2</a>
-			</nav>
-		</section>
+			<a href="https://www.google.com">Google</a> |
+			<a href="https://dallascollege.edu">Dallas College</a>
+		</nav>
+		<h1><strong>Main Character</strong></h1>
 		
 		<section>
-			<h1><strong>Main Character</strong></h1>
 			<h2>Welcome to my digital portfolio!</h2>
 			<p>I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
         	</p>
@@ -34,14 +31,11 @@
 				<li>Excellent communication and teamwork skills, with the ability to present and justify design decisions.</li>
 			</ul>
 		</section>
-
-		<section>
-			<footer>	
+		<footer>	
 			<p>&copy; 2025 Omar Brown</p>
 			<p>Contact: 000-000-0000</p>
 			<p>Email: omar@brown.com</p>
 			</footer>
-		</section>
 		</main>
 	</body>
 </html>
