added navigation links and main character heading with divs and spans

--- a/index.html
+++ b/index.html
@@ -7,21 +7,31 @@
 	</head>
 	<body>
 		<main>
+		<!-- Link to external JavaScript file -->
 		<script src="userInfo.js"></script>
-		<nav id="top-nav"> 
+		<span><div><picture class="hero"><img src="picture.jpg" alt="hero image" width="600" height="400">
+		</picture></div>
+		</span>
+		<div id="nav">
+			<nav>
 			<a href="/index.html">Home</a> |
 			<a href="https://www.google.com">Google</a> |
 			<a href="https://dallascollege.edu">Dallas College</a>
-		</nav>
-		<h1><strong>Main Character</strong></h1>
+			</nav>
+		</div>
+		<br>
+		<div><h1><strong>Main Character</strong></h1></div>
 		
-		<section>
+		<div id="about">
+			<section>
 			<h2>Welcome to my digital portfolio!</h2>
 			<p>I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
         	</p>
-		</section>
-
-		<section>
+			</section>
+		</div>
+		<br>
+		<div id="skills">
+			<section>
 			<h2>Skills</h2>
 			<ul>
 				<li>Proficient in design tools such as Adobe Creative Suite (Photoshop, Illustrator, XD) and Figma.</li>
@@ -30,12 +40,16 @@
 				<li>Basic knowledge of HTML, CSS, and JavaScript for effective collaboration with developers.</li>
 				<li>Excellent communication and teamwork skills, with the ability to present and justify design decisions.</li>
 			</ul>
-		</section>
-		<footer>	
+			</section>
+		</div>
+		<br>
+		<div id="footer">
+			<footer>	
 			<p>&copy; 2025 Omar Brown</p>
 			<p>Contact: 000-000-0000</p>
 			<p>Email: omar@brown.com</p>
 			</footer>
+		</div>
 		</main>
 	</body>
 </html>
