corrected link to picture

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 		<main>
 		<!-- Link to external JavaScript file -->
 		<script src="userInfo.js"></script>
-		<span><div><picture class="hero"><img src="picture.jpg" alt="hero image" width="600" height="400">
-		</picture></div>
+		<span>
+		<div><picture class="hero">
+			<img src="images/picture.jpg" alt="boat and rainbow" width="600" height="400">
+			</picture>
+		</div>
 		</span>
+		<br>
 		<div id="nav">
 			<nav>
 			<a href="/index.html">Home</a> |
