fixed the span thing

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 		<main>
 		<!-- Link to external JavaScript file -->
 		<script src="userInfo.js"></script>
-		<span>
-		<div><picture class="hero">
+		
+		<div>
+			<span>
+			<picture class="hero">
 			<img src="images/picture.jpg" alt="boat and rainbow" width="600" height="400">
 			</picture>
+			</span>
 		</div>
-		</span>
+		
 		<br>
 		<div id="nav">
 			<nav>
