fixed code input prompts, added customization, and navigation for test.html

--- a/test.html
+++ b/test.html
@@ -4,11 +4,11 @@
 		<title>My First Page</title>
 	</head>
 	<body>
-		<h1>Omar Brown</h1>
+		<h1>Test Page</h1>
 		<nav>
-			<a href="">Lab 1</a> |
-			<a href="">Lab 2</a> |
-			<a href="">Lab 3</a>
+			<a href="index.html">Home</a> |
+			<a href="">Link 2</a> |
+			<a href="">LInk 3</a>
 		</nav>
 		<p>I'm Omar. I'm taking this course to advance towards
             my degree in Digital Media.
