--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="nav">
 			<nav>
 			<a href="/index.html">Home</a> |
-			<a href="https://www.google.com">Google</a> |
+			<a href="test.html">Test Page</a> |
 			<a href="https://dallascollege.edu">Dallas College</a>
 			</nav>
 		</div>
