--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 		
 		<br>
-		<div id="nav">
+		<div id="top-nav">
 			<nav>
 			<a href="/index.html">Home</a> |
 			<a href="test.html">Test Page</a> |
