--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		</div>
 		
 		<br>
-		<div id="top-nav">
-			<nav>
+		<div>
+			<nav id="top-nav">
 			<a href="/index.html">Home</a> |
 			<a href="test.html">Test Page</a> |
 			<a href="https://dallascollege.edu">Dallas College</a>
