fixing class for top nav

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 		
 		<br>
 		<div>
-			<nav id="top-nav">
+			<nav class="top-nav">
 			<a href="/index.html">Home</a> |
 			<a href="test.html">Test Page</a> |
 			<a href="https://dallascollege.edu">Dallas College</a>
 			</nav>
 		</div>
 		<br>
-		<div><h1><strong>Main Character</strong></h1></div>
+		<div><h1>Main Character</h1></div>
 		
 		<div id="about">
 			<section>
