--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
 		<div id="footer">
 			<footer>	
 			<p>&copy; 2025 Omar Brown</p>
-			<p>Contact: 000-000-0000</p>
-			<p>Email: omar@brown.com</p>
+			<div class="contact-info">
+			<p class="Contact">Contact: 000-000-0000</p>
+			<p class="Contact">Email: omar@brown.com</p>
+			</div>
 			</footer>
 		</div>
 		</main>
