--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 			</section>
 		</div>
 		<br>
-		<div id="skills">
+		<div id="skills-list">
 			<section>
 			<h2>Skills</h2>
-			<ul>
-				<li>Proficient in design tools such as Adobe Creative Suite (Photoshop, Illustrator, XD) and Figma.</li>
+			<ul class="skills-list ul">
+				<li class="skills-list li">Proficient in design tools such as Adobe Creative Suite (Photoshop, Illustrator, XD) and Figma.</li>
 				<li>Strong understanding of user-centered design principles and best practices.</li>
 				<li>Experience with wireframing and prototyping tools like Sketch and InVision.</li>
 				<li>Basic knowledge of HTML, CSS, and JavaScript for effective collaboration with developers.</li>
