more css corrections

--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
 		<div id="skills-list">
 			<section>
 			<h2>Skills</h2>
-			<ul class="skills-list ul">
-				<li class="skills-list li">Proficient in design tools such as Adobe Creative Suite (Photoshop, Illustrator, XD) and Figma.</li>
-				<li>Strong understanding of user-centered design principles and best practices.</li>
-				<li>Experience with wireframing and prototyping tools like Sketch and InVision.</li>
-				<li>Basic knowledge of HTML, CSS, and JavaScript for effective collaboration with developers.</li>
-				<li>Excellent communication and teamwork skills, with the ability to present and justify design decisions.</li>
+			<ul id="skills-list ul">
+				<li id="skills-list li">Proficient in design tools such as Adobe Creative Suite (Photoshop, Illustrator, XD) and Figma.</li>
+				<li id="skills-list li">Strong understanding of user-centered design principles and best practices.</li>
+				<li id="skills-list li">Experience with wireframing and prototyping tools like Sketch and InVision.</li>
+				<li id="skills-list li">Basic knowledge of HTML, CSS, and JavaScript for effective collaboration with developers.</li>
+				<li id="skills-list li">Excellent communication and teamwork skills, with the ability to present and justify design decisions.</li>
 			</ul>
 			</section>
 		</div>
 		<br>
-		<div id="footer">
+		<div>
 			<footer>	
 			<p>&copy; 2025 Omar Brown</p>
-			<div class="contact-info">
-			<p class="Contact">Contact: 000-000-0000</p>
-			<p class="Contact">Email: omar@brown.com</p>
+			<div id="contact-info">
+				<p>Contact: 000-000-0000</p>
+				<p>Email: <a id="contact-info a">omar@brown.com</a></p>
 			</div>
 			</footer>
 		</div>
