correcting styling issues

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 		</div>
 		<br>
 		<div>
-			<footer>	
+			<footer id="footer">	
 			<p>&copy; 2025 Omar Brown</p>
 			<div id="contact-info">
 				<p>Contact: 000-000-0000</p>
-				<p>Email: <a id="contact-info a">omar@brown.com</a></p>
+				<p>Email: <a id="contact-info a">mailto:omar@brown.com</a></p>
 			</div>
 			</footer>
 		</div>
