--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<br>
 		<div><h1>Main Character</h1></div>
 		
-		<div id="about">
+		<div>
 			<section>
 			<h2>Welcome to my digital portfolio!</h2>
 			<p>I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
@@ -37,15 +37,15 @@
 			</section>
 		</div>
 		<br>
-		<div id="skills-list">
+		<div>
 			<section>
 			<h2>Skills</h2>
-			<ul id="skills-list ul">
-				<li id="skills-list li">Proficient in design tools such as Adobe Creative Suite (Photoshop, Illustrator, XD) and Figma.</li>
-				<li id="skills-list li">Strong understanding of user-centered design principles and best practices.</li>
-				<li id="skills-list li">Experience with wireframing and prototyping tools like Sketch and InVision.</li>
-				<li id="skills-list li">Basic knowledge of HTML, CSS, and JavaScript for effective collaboration with developers.</li>
-				<li id="skills-list li">Excellent communication and teamwork skills, with the ability to present and justify design decisions.</li>
+			<ul>
+				<li>Proficient in design tools such as Adobe Creative Suite (Photoshop, Illustrator, XD) and Figma.</li>
+				<li>Strong understanding of user-centered design principles and best practices.</li>
+				<li>Experience with wireframing and prototyping tools like Sketch and InVision.</li>
+				<li>Basic knowledge of HTML, CSS, and JavaScript for effective collaboration with developers.</li>
+				<li>Excellent communication and teamwork skills, with the ability to present and justify design decisions.</li>
 			</ul>
 			</section>
 		</div>
@@ -53,9 +53,9 @@
 		<div>
 			<footer id="footer">	
 			<p>&copy; 2025 Omar Brown</p>
-			<div id="contact-info">
+			<div>
 				<p>Contact: 000-000-0000</p>
-				<p>Email: <a id="contact-info a">mailto:omar@brown.com</a></p>
+				<p>Email: <a>mailto:omar@brown.com</a></p>
 			</div>
 			</footer>
 		</div>
