fixed ids and classes

--- a/index.html
+++ b/index.html
@@ -2,42 +2,50 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="author" content="Omar Brown">
+
 		<title>Beginning Web Programming</title>
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<main>
 		<!-- Link to external JavaScript file -->
 		<script src="userInfo.js"></script>
-		
-		<div>
-			<span>
-			<picture class="hero">
-			<img src="images/picture.jpg" alt="boat and rainbow" width="600" height="400">
-			</picture>
-			</span>
-		</div>
-		
 		<br>
 		<div>
-			<nav class="top-nav">
+			<nav id="top-nav">
 			<a href="/index.html">Home</a> |
 			<a href="test.html">Test Page</a> |
 			<a href="https://dallascollege.edu">Dallas College</a>
 			</nav>
 		</div>
 		<br>
+
+	<main>
+		<div><header> Welcome To My Page</header>
+		</div>
+		<br>
+		<div>
+			<span>
+			<picture>
+			<img src="images/picture.jpg" alt="boat and rainbow" width="600" height="400">
+			</picture>
+			</span>
+		</div>
+		
+		
+		<br>
 		<div><h1>Main Character</h1></div>
 		
 		<div>
 			<section>
-			<h2>Welcome to my digital portfolio!</h2>
+			<h2>A little about me...</h2>
 			<p>I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
         	</p>
 			</section>
 		</div>
 		<br>
-		<div>
+		<div id="skills-list">
 			<section>
 			<h2>Skills</h2>
 			<ul>
@@ -49,9 +57,11 @@
 			</ul>
 			</section>
 		</div>
+	</main>
 		<br>
+		
 		<div>
-			<footer id="footer">	
+			<footer>	
 			<p>&copy; 2025 Omar Brown</p>
 			<div>
 				<p>Contact: 000-000-0000</p>
@@ -59,6 +69,6 @@
 			</div>
 			</footer>
 		</div>
-		</main>
+		
 	</body>
 </html>
