--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 		<div>
 			<footer>	
 			<p>&copy; 2025 Omar Brown</p>
-			<div>
+			<div id="contact-info">
 				<p>Contact: 000-000-0000</p>
-				<p>Email: <a>mailto:omar@brown.com</a></p>
+				<p>Email: <a href="mailto:omar@brown.com"></a></p>
 			</div>
 			</footer>
 		</div>
