corrected style call...renamed file to style.css omg

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="author" content="Omar Brown">
 
 		<title>Beginning Web Programming</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<!-- Link to external JavaScript file -->
@@ -45,18 +45,7 @@
 			</section>
 		</div>
 		<br>
-		<div id="skills-list">
-			<section>
-			<h2>Skills</h2>
-			<ul>
-				<li>Proficient in design tools such as Adobe Creative Suite (Photoshop, Illustrator, XD) and Figma.</li>
-				<li>Strong understanding of user-centered design principles and best practices.</li>
-				<li>Experience with wireframing and prototyping tools like Sketch and InVision.</li>
-				<li>Basic knowledge of HTML, CSS, and JavaScript for effective collaboration with developers.</li>
-				<li>Excellent communication and teamwork skills, with the ability to present and justify design decisions.</li>
-			</ul>
-			</section>
-		</div>
+		
 	</main>
 		<br>
 		
