--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 		<div>
 			<footer>	
 			<p>&copy; 2025 Omar Brown</p>
-			<div id="contact-info">
-				<p>Contact: 000-000-0000</p>
-				<p>Email: <a href="mailto:omar@brown.com"></a></p>
+			<div>
+				<p id="contact-info">Contact: 000-000-0000</p>
+				<p id="contact-info">Email: <a href="mailto:omar@brown.com">omar@brown.com</a></p>
 			</div>
 			</footer>
 		</div>
