--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<p>&copy; 2025 Omar Brown</p>
 			<div>
 				<p id="contact-info">Contact: 000-000-0000</p>
-				<p id="contact-info">Email: <a href="mailto:omar@brown.com">omar@brown.com</a></p>
+				<p id="contact-info">Email: </p><a href="mailto:omar@brown.com">omar@brown.com</a>
 			</div>
 			</footer>
 		</div>
