--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 			<footer>	
 			<p>&copy; 2025 Omar Brown</p>
 			<div>
-				<p id="contact-info">Contact: 000-000-0000</p>
-				<p id="contact-info">Email: </p><a href="mailto:omar@brown.com">omar@brown.com</a>
+				<p>Contact: 000-000-0000</p>
+				<p>Email: </p><a href="mailto:omar@brown.com">omar@brown.com</a>
 			</div>
 			</footer>
 		</div>
