--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<br>
 
 	<main>
-		<div><header> Welcome To My Page</header>
+		<div><header><h2>Welcome To My Page</h2></header>
 		</div>
 		<br>
 		<div>
