--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
 		
 		<div>
 			<footer>	
-			<p>&copy; 2025 Omar Brown</p>
-			<div>
-				<p>Contact: 000-000-0000</p>
-				<a href="mailto:omar@brown.com">omar@brown.com</a>
-			</div>
+			<p>&copy; 2025 Omar Brown Contact: 000-000-0000 <a href="mailto:omar@brown.com">omar@brown.com</a>
+			</p>
+		</div>
 			</footer>
 		</div>
 		
