--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
 		<br>
 		
 		<div>
-			<footer>	
-			<p>&copy; 2025 Omar Brown Contact: 000-000-0000 <a href="mailto:omar@brown.com">omar@brown.com</a>
-			</p>
-		
-			</footer>
+		<footer>	
+			<p>&copy; 2025 Omar Brown Contact: 000-000-0000 <a href="mailto:omar@brown.com">omar@brown.com</a></p>
+		</footer>
 		</div>
 		
 	</body>
