added background id, adjusted margins and padding and rearranged hierarchy text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<br>
 
 	<main>
-		<div><header><h2>I'm glad you stopped by!</h2></header>
+		<div><header><h1>I'm glad you stopped by!</h1></header>
 		</div>
 		<br>
 		<div>
@@ -35,14 +35,16 @@
 		
 		
 		<br>
-		<div><h1>Main Character</h1></div>
+		<div><h2>Main Character</h2></div>
 		
 		<div class="somepadding">
+			<span id="backgroundchange">
 			<section>
-			<h2>A little about me...</h2>
+			<h3>A little about me...</h3>
 			<p>I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
         	</p>
 			</section>
+			</span>
 		</div>
 		<br>
 		
@@ -50,10 +52,12 @@
 		<br>
 		
 		<div>
+		<span>
 		<footer>	
-			<p>&copy; 2025 Omar Brown Contact: 000-000-0000 <a href="mailto:omar@brown.com">omar@brown.com</a></p>
+			<p>&copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">omar@brown.com</a></p>
 		</footer>
-		</div>
+		</span>
+	</div>
 		
 	</body>
 </html>
