i'm losing track of my changes to be honest

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<!-- Link to external JavaScript file -->
-		<script src="userInfo.js"></script>
-		<br>
 		<div>
 			<nav id="top-nav">
 			<a href="/index.html">Home</a> |
@@ -22,13 +19,15 @@
 		<br>
 
 	<main>
-		<div><header><h1>I'm glad you stopped by!</h1></header>
+		<!-- Link to external JavaScript file -->
+		<script src="userInfo.js"></script>
+		<br><div><header><h1>I'm glad you stopped by!</h1></header>
 		</div>
 		<br>
 		<div>
 			<span>
 			<picture>
-			<img src="images/picture.jpg" alt="boat and rainbow" width="600" height="400">
+			<img src="images/picture.jpg" alt="boat and rainbow" width=100% height=auto>
 			</picture>
 			</span>
 		</div>
@@ -38,13 +37,13 @@
 		<div><h2>Main Character</h2></div>
 		
 		<div class="somepadding">
+			<section></section>
 			<span id="backgroundchange">
-			<section>
 			<h3>A little about me...</h3>
 			<p>I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
         	</p>
-			</section>
 			</span>
+			</section>
 		</div>
 		<br>
 		
@@ -52,11 +51,11 @@
 		<br>
 		
 		<div>
-		<span>
-		<footer>	
+		<footer>
+		<span>	
 			<p>&copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">omar@brown.com</a></p>
-		</footer>
 		</span>
+		</footer>
 	</div>
 		
 	</body>
