--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div><h2>Main Character</h2></div>
 		
 		<div class="somepadding">
-			<section></section>
+			<section>
 			<span id="backgroundchange">
 			<h3>A little about me...</h3>
 			<p>I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
