correcting validation errors in html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div>
 			<span>
 			<picture>
-			<img src="images/picture.jpg" alt="boat and rainbow" width=100% height=auto>
+			<img src="images/picture.jpg" alt="boat and rainbow" width=600 height=400>
 			</picture>
 			</span>
 		</div>
@@ -38,11 +38,10 @@
 		
 		<div class="somepadding">
 			<section>
-			<span id="backgroundchange">
 			<h3>A little about me...</h3>
-			<p>I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
-        	</p>
-			</span>
+			<p><span id="backgroundchange">
+			I'm Omar Brown, a passionate and dedicated aspiring UI/UX graphic designer with a keen eye for detail and a love for creating meaningful digital experiences. My professional goals center around becoming a versatile designer who can bridge the gap between user needs and business objectives, specializing in creating intuitive interfaces that profive seameless user experiences. Through continuous learning and hands-on practice, I'm developing expertise in user research, wireframing, prototyping, and visual design principles while staying current with design trends and emerging technologies. I believe great design comes from empathy and understanding, approaching every project with curiosity about end users to creat solutions that aren ot just visually appealing, but truly useful and meaningful.
+        	</span></p>
 			</section>
 		</div>
 		<br>
