--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 		
 		<div>
 		<footer>
-		<span>	
-			<p>&copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">omar@brown.com</a></p>
-		</span>
+		<p><span>	
+			&copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">omar@brown.com</a>
+		</span></p>
 		</footer>
 	</div>
 		
