Trying to fix header font size again

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 
 	<main>
 		<!-- Link to external JavaScript file -->
-		<script src="userInfo.js"></script>
-		<br><div><header><h1>I'm glad you stopped by!</h1></header>
+		
+		<br>
+		<div>
+			<header>
+			<script src="userInfo.js"></script>
+			<h1>I'm glad you stopped by!</h1></header>
 		</div>
 		<br>
 		<div>
