put some styling on the picture element

--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 		<br>
 		<div>
 			<header>
-			<script src="userInfo.js"></script>
-			<h1>I'm glad you stopped by!</h1></header>
+			<h1><script src="userInfo.js"></script></h1>
+			<h2>I'm glad you stopped by!</h2>
+			</header>
 		</div>
 		<br>
 		<div>
 			<span>
 			<picture>
-			<img src="images/picture.jpg" alt="boat and rainbow" width=600 height=400>
+			<img src="images/picture.jpg" alt="boat and rainbow">
 			</picture>
 			</span>
 		</div>
