set margins on top nav and tried to fix border on picture

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div>
 			<span>
 			<picture>
-			<img src="images/picture.jpg" alt="boat and rainbow">
+			<img src="images/picture.jpg" alt="boat and rainbow" aria-label="boat and rainbow">
 			</picture>
 			</span>
 		</div>
