fixing headline and nav bar links, changing background colors

--- a/index.html
+++ b/index.html
@@ -13,27 +13,25 @@
 			<nav id="top-nav">
 			<a href="/index.html">Home</a> |
 			<a href="test.html">Test Page</a> |
-			<a href="">Assignment 4</a>
-			<a href="">Assignment 5</a>
-			<a href="">Assignment 6</a>
+			<a href="www.google.com">Google</a>
 			</nav>
 		</div>
 		<br>
 		<div>
 			<nav id="side-nav">
 			<a href="/index.html">Home</a> |
-			<a href="">Assignment 4</a>
-			<a href="">Assignment 5</a>
-			<a href="">Assignment 6</a>
-			<a href="">Assignment 7</a>
-			<a href="">Assignment 8</a>
-			<a href="">Assignment 9</a>
-			<a href="">Assignment 10</a>
-			<a href="">Assignment 11</a>
-			<a href="">Assignment 12</a>
-			<a href="">Assignment 13</a>
-			<a href="">Assignment 14</a>
-			<a href="">Assignment 15</a>
+			<a href="">Assignment 4</a> |
+			<a href="">Assignment 5</a> |
+			<a href="">Assignment 6</a> |
+			<a href="">Assignment 7</a> |
+			<a href="">Assignment 8</a> |
+			<a href="">Assignment 9</a> |
+			<a href="">Assignment 10</a> |
+			<a href="">Assignment 11</a> |
+			<a href="">Assignment 12</a> |
+			<a href="">Assignment 13</a> |
+			<a href="">Assignment 14</a> |
+			<a href="">Assignment 15</a> |
 			<a href="">Assignment 16</a>
 			</nav>
 		</div>
@@ -44,7 +42,7 @@
 		<br>
 		<div>
 			<header>
-			<h1>Welcome, <script src="userInfo.js"></script></h1>
+			<script src="userInfo.js"></script>
 			<h2>I'm glad you stopped by!</h2>
 			</header>
 		</div>
