--- a/index.html
+++ b/index.html
@@ -15,23 +15,21 @@
 			<a href="test.html">Test Page</a> | 
 			<a href="www.google.com">Google</a>
 			</nav>
-		</div>
-		<br>
-		<div>
+		
 			<nav id="side-nav">
-			<a href="/index.html">Home</a> |
-			<a href="">Assignment 4</a> |
-			<a href="">Assignment 5</a> |
-			<a href="">Assignment 6</a> |
-			<a href="">Assignment 7</a> |
-			<a href="">Assignment 8</a> |
-			<a href="">Assignment 9</a> |
-			<a href="">Assignment 10</a> |
-			<a href="">Assignment 11</a> |
-			<a href="">Assignment 12</a> |
-			<a href="">Assignment 13</a> |
-			<a href="">Assignment 14</a> | 
-			<a href="">Assignment 15</a> |
+			<a href="/index.html">Home</a>
+			<a href="">Assignment 4</a>
+			<a href="">Assignment 5</a>
+			<a href="">Assignment 6</a>
+			<a href="">Assignment 7</a>
+			<a href="">Assignment 8</a>
+			<a href="">Assignment 9</a>
+			<a href="">Assignment 10</a>
+			<a href="">Assignment 11</a>
+			<a href="">Assignment 12</a>
+			<a href="">Assignment 13</a>
+			<a href="">Assignment 14</a> 
+			<a href="">Assignment 15</a>
 			<a href="">Assignment 16</a>
 			</nav>
 		</div>
