trying to get nav situated

--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 	<body>
 		<div>
 			<nav id="top-nav">
-			<a href="/index.html">Home</a> | 
-			<a href="test.html">Test Page</a> | 
-			<a href="www.google.com">Google</a>
+			<ul><a href="/index.html">Home</a></ul>
+			<ul><a href="test.html">Test Page</a></ul>
+			<ul><a href="www.google.com">Google</a></ul>
 			</nav>
 		
 			<nav id="side-nav">
-			<a href="/index.html">Home</a>
-			<a href="">Assignment 4</a>
-			<a href="">Assignment 5</a>
-			<a href="">Assignment 6</a>
-			<a href="">Assignment 7</a>
-			<a href="">Assignment 8</a>
-			<a href="">Assignment 9</a>
-			<a href="">Assignment 10</a>
-			<a href="">Assignment 11</a>
-			<a href="">Assignment 12</a>
-			<a href="">Assignment 13</a>
-			<a href="">Assignment 14</a> 
-			<a href="">Assignment 15</a>
-			<a href="">Assignment 16</a>
+			<li><a href="/index.html">Home</a></ul>
+			<li><a href="">Assignment 4</a></ul>
+			<li><a href="">Assignment 5</a></ul>
+			<ul><a href="">Assignment 6</a></ul>
+			<ul><a href="">Assignment 7</a></ul>
+			<ul><a href="">Assignment 8</a></ul>
+			<ul><a href="">Assignment 9</a></ul>
+			<ul><a href="">Assignment 10</a></ul>
+			<ul><a href="">Assignment 11</a></ul>
+			<ul><a href="">Assignment 12</a></ul>
+			<ul><a href="">Assignment 13</a></ul>
+			<ul><a href="">Assignment 14</a></ul> 
+			<ul><a href="">Assignment 15</a></ul>
+			<ul><a href="">Assignment 16</a></ul>
 			</nav>
 		</div>
 		<br>
