trying to get the page to look right

--- a/index.html
+++ b/index.html
@@ -11,26 +11,30 @@
 	<body>
 		<div>
 			<nav id="top-nav">
-			<ul><a href="/index.html">Home</a></ul>
-			<ul><a href="test.html">Test Page</a></ul>
-			<ul><a href="www.google.com">Google</a></ul>
+			<ul>
+				<li><a href="/index.html">Home</a></li>
+				<li><a href="test.html">Test Page</a></li>
+				<li><a href="www.google.com">Google</a></li>
+			</ul>
 			</nav>
 		
 			<nav id="side-nav">
-			<li><a href="/index.html">Home</a></ul>
-			<li><a href="">Assignment 4</a></ul>
-			<li><a href="">Assignment 5</a></ul>
-			<ul><a href="">Assignment 6</a></ul>
-			<ul><a href="">Assignment 7</a></ul>
-			<ul><a href="">Assignment 8</a></ul>
-			<ul><a href="">Assignment 9</a></ul>
-			<ul><a href="">Assignment 10</a></ul>
-			<ul><a href="">Assignment 11</a></ul>
-			<ul><a href="">Assignment 12</a></ul>
-			<ul><a href="">Assignment 13</a></ul>
-			<ul><a href="">Assignment 14</a></ul> 
-			<ul><a href="">Assignment 15</a></ul>
-			<ul><a href="">Assignment 16</a></ul>
+			<ul>
+				<li><a href="/index.html">Home</a></li>
+				<li><a href="">Assignment 4</a></li>
+				<li><a href="">Assignment 5</a></li>
+				<li><a href="">Assignment 6</a></li>
+				<li><a href="">Assignment 7</a></li>
+				<li><a href="">Assignment 8</a></li>
+				<li><a href="">Assignment 9</a></li>
+				<li><a href="">Assignment 10</a></li>
+				<li><a href="">Assignment 11</a></li>
+				<li><a href="">Assignment 12</a></li>
+				<li><a href="">Assignment 13</a></li>
+				<li><a href="">Assignment 14</a></li> 
+				<li><a href="">Assignment 15</a></li>
+				<li><a href="">Assignment 16</a></li>
+			</ul>
 			</nav>
 		</div>
 		<br>
