fixing navigations omg

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		<title>Beginning Web Programming</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
-	<body>
+	<div>
+		<body>
+		
 		<div>
 			<nav id="top-nav">
 			<ul>
@@ -38,7 +40,11 @@
 			</nav>
 		</div>
 		<br>
-	<main>
+	</body>
+	</div>
+
+	<div>
+		<main>
 		<!-- Link to external JavaScript file -->
 		
 		<br>
@@ -70,11 +76,11 @@
 			</section>
 		</div>
 		<br>
-		
-	</main>
-		<br>
-		
-		<div>
+		</main>
+	</div>
+	<br>
+
+	<div>
 		<footer>
 		<p><span>	
 			&copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">omar@brown.com</a>
