aligned text with agenda

--- a/quotes.html
+++ b/quotes.html
@@ -46,7 +46,7 @@
          </div> 
          <br> 
          <div class="somepadding" id="backgroundchange">
-         <h3>Enter the Number of Your Favorite Quote!</h3>  
+         <h3>That's a good one!</h3>  
          <script src="quotes.js"></script>
             </div>
             <br>
