updated footer and assignment 4 link in nav bar

--- a/quotes.html
+++ b/quotes.html
@@ -19,7 +19,7 @@
             <nav id="side-nav">
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="">Assignment 4</a></li>
+                <li><a href="/quotes.html">Assignment 4</a></li>
                 <li><a href="">Assignment 5</a></li>
                 <li><a href="">Assignment 6</a></li>
                 <li><a href="">Assignment 7</a></li>
@@ -49,12 +49,15 @@
          <h3>That's a good one!</h3>  
          <script src="quotes.js"></script>
             </div>
-            <br>
-            <div>
-            <footer>
-            <p>Copyright &copy; 2024 Omar Brown</p>
-            </footer>
-            </div>
+    <br>
+
+	<div>
+		<footer>
+		<p><span>	
+			&copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">omar@brown.com</a>
+		</span></p>
+		</footer>
+	</div>
         </main>
     </div>
     </body>
