--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<nav id="side-nav">
 			<ul>
 				<li><a href="/index.html">Home</a></li>
-				<li><a href="/quotes.html">Assignment 4</a></li>
+				<li><a href="#quotes">Assignment 4</a></li>
 				<li><a href="">Assignment 5</a></li>
 				<li><a href="">Assignment 6</a></li>
 				<li><a href="">Assignment 7</a></li>
