added styling for quote page footer in style.css

--- a/quotes.html
+++ b/quotes.html
@@ -52,7 +52,7 @@
     <br>
 
 	<div>
-		<footer>
+		<footer id="quotefooter">
 		<p><span>	
 			&copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">omar@brown.com</a>
 		</span></p>
