--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
 
 	<div>
 		<footer>
-		<p><span>	
-			&copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">omar@brown.com</a>
-		</span></p>
+		<p>
+		<span>	
+		&copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">omar@brown.com</a>
+		</span>
+		</p>
 		</footer>
 	</div>
 	</body>
