--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<ul>
 				<li><a href="/index.html">Home</a></li>
 				<li><a href="test.html">Test Page</a></li>
+				<li><a href="quotes.html">Test Page</a></li>
 				<li><a href="www.google.com">Google</a></li>
 			</ul>
 			</nav>
