added assignment name to side nav in index.html and quotes.html

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 			<ul>
 				<li><a href="/index.html">Home</a></li>
 				<li><a href="test.html">Test Page</a></li>
-				<li><a href="quotes.html">Test Page</a></li>
 				<li><a href="www.google.com">Google</a></li>
 			</ul>
 			</nav>
 			<nav id="side-nav">
 			<ul>
 				<li><a href="/index.html">Home</a></li>
-				<li><a href="quotes.html">Assignment 4</a></li>
+				<li><a href="quotes.html">JavaScript Basics</a></li>
 				<li><a href="">Assignment 5</a></li>
 				<li><a href="">Assignment 6</a></li>
 				<li><a href="">Assignment 7</a></li>
