created a number guessing game using JavaScript. Also made some adjustments to the CSS for better spacing on smaller screens on quotes

--- a/secret-number-game.html
+++ b/secret-number-game.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Omar Brown">
-        <title>Quotes</title>
+        <title>Secret Number Game</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -24,20 +24,20 @@
     <br>
     <div>
             <header>
-            <h2>Quotes from Famous People!</h2> 
+            <h2>Secret Number Game!</h2> 
             </header> 
          </div> 
          <br> 
          <div class="somepadding" id="backgroundchange">
-         <h3>That's a good one!</h3>  
-         <script src="quotes.js"></script>
+         <h3>Can you guess the secret number?</h3>  
+         <script src="secret-number-game.js"></script>
             </div>
     <br>
 <nav id="side-nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="quotes.html">JavaScript Basics</a></li>
-                <li><a href="secret-number-game.html">Loops and Conditionals</a></li>
+                <li><a href="">Assignment 5</a></li>
                 <li><a href="">Assignment 6</a></li>
                 <li><a href="">Assignment 7</a></li>
                 <li><a href="">Assignment 8</a></li>
@@ -51,15 +51,8 @@
                 <li><a href="">Assignment 16</a></li>
             </ul>
             </nav>
-	<div>
-		<footer id="quotefooter">
-		<p><span>	
-			&copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">omar@brown.com</a>
-		</span></p>
-		</footer>
-	</div>
-        </main>
-    </div>
-    </body>
-    
-</html>
+                <div>
+                            <footer id="quotefooter">
+                            <p><span>	
+                                &copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">
+                                    
