updated side nav link to secret-number-game.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<ul>
 				<li><a href="/index.html">Home</a></li>
 				<li><a href="quotes.html">JavaScript Basics</a></li>
-				<li><a href="">Loops and Conditionals</a></li>
+				<li><a href="secret-number-game.html">Loops and Conditionals</a></li>
 				<li><a href="">Assignment 6</a></li>
 				<li><a href="">Assignment 7</a></li>
 				<li><a href="">Assignment 8</a></li>
