--- a/secret-number-game.html
+++ b/secret-number-game.html
@@ -29,7 +29,7 @@
          </div> 
          <br> 
          <div class="somepadding" id="backgroundchange">
-         <h3>Can you guess the secret number?</h3>  
+         <h3>Can you guess my secret number?</h3>  
          <script src="secret-number-game.js"></script>
             </div>
     <br>
@@ -52,7 +52,11 @@
             </ul>
             </nav>
                 <div>
+                </main>
+           
                             <footer id="quotefooter">
                             <p><span>	
                                 &copy; 2025 Omar Brown | Contact: 000-000-0000 | <a href="mailto:omar@brown.com">
                                     
+</a></span></p> </body>
+</html>
