--- a/secret-number-game.html
+++ b/secret-number-game.html
@@ -37,7 +37,7 @@
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="quotes.html">JavaScript Basics</a></li>
-                <li><a href="">Assignment 5</a></li>
+                <li><a href="secret-number-game.html">Loops and Conditionals</a></li>
                 <li><a href="">Assignment 6</a></li>
                 <li><a href="">Assignment 7</a></li>
                 <li><a href="">Assignment 8</a></li>
